--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
 
     <string name="dialog_name">Descripció</string>
     <string name="dialog_loc">Localització</string>
+    <string name="dialog_lat">Latitud</string>
+    <string name="dialog_lon">Longitud</string>
     <string name="dialog_ok">Afegir</string>
     <string name="dialog_cancel">Cancelar</string>
 
