--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="dialog_snooze">Més tard</string>
 
     <string name="hint_name">Comprar pa...</string>
+    <string name="notif_text2">Llisca a esquerra o dreta per ingorar-me.</string>
+
+    <!--<string name=""></string>-->
+
 </resources>
